feat: esthesis BOM, esthesis Java Common, esthesis EDGE introduction