@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>esthesis</groupId>
-  <artifactId>esthesis-bom-java</artifactId>
+  <artifactId>esthesis-bom</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -13,8 +13,10 @@
     <!-- MAVEN -->
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
     <maven.compiler.release>21</maven.compiler.release>
     <surefire-plugin.version>3.3.1</surefire-plugin.version>
@@ -23,19 +25,64 @@
     <skipITs>true</skipITs>
 
     <!-- QUARKUS -->
-    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.version>3.11.1</quarkus.platform.version>
 
     <!-- THIRD-PARTY -->
     <org.projectlombok.version>1.18.34</org.projectlombok.version>
+    <org.apache.commons.version>3.14.0</org.apache.commons.version>
+    <instancio-junit>2.16.1</instancio-junit>
+    <jackson-antpathfilter.version>1.0.2</jackson-antpathfilter.version>
+    <slugify.version>3.0.2</slugify.version>
+    <awaitility.version>4.2.0</awaitility.version>
+    <zeebe.version>1.3.0</zeebe.version>
+    <semver4j.version>5.3.0</semver4j.version>
+
+    <!--
+    <bson.version>4.6.1</bson.version>
+    <commons-codec.version>1.15</commons-codec.version>
+    <compiler-plugin.version>3.10.1</compiler-plugin.version>
+    <org.projectlombok.version>1.18.34</org.projectlombok.version>
+    <instancio-junit>2.16.1</instancio-junit>
+    <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
+
+
+    <httpclient5-fluent.version>5.1.4</httpclient5-fluent.version>
+    -->
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <!-- DEV & BUILD -->
       <dependency>
-        <groupId>${quarkus.platform.group-id}</groupId>
-        <artifactId>${quarkus.platform.artifact-id}</artifactId>
+        <groupId>org.semver4j</groupId>
+        <artifactId>semver4j</artifactId>
+        <version>${semver4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.quarkiverse.zeebe</groupId>
+        <artifactId>quarkus-zeebe</artifactId>
+        <version>${zeebe.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>${awaitility.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.slugify</groupId>
+        <artifactId>slugify</artifactId>
+        <version>${slugify.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.quarkus.platform</groupId>
+        <artifactId>quarkus-bom</artifactId>
+        <scope>import</scope>
+        <type>pom</type>
+        <version>${quarkus.platform.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.quarkus.platform</groupId>
+        <artifactId>quarkus-camel-bom</artifactId>
         <scope>import</scope>
         <type>pom</type>
         <version>${quarkus.platform.version}</version>
@@ -44,6 +91,24 @@
         <artifactId>lombok</artifactId>
         <groupId>org.projectlombok</groupId>
         <version>${org.projectlombok.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>commons-lang3</artifactId>
+        <groupId>org.apache.commons</groupId>
+        <version>${org.apache.commons.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>jackson-antpathfilter</artifactId>
+        <groupId>ch.mfrey.jackson</groupId>
+        <version>${jackson-antpathfilter.version}</version>
+      </dependency>
+
+      <!-- TESTING -->
+      <dependency>
+        <groupId>org.instancio</groupId>
+        <artifactId>instancio-junit</artifactId>
+        <version>${instancio-junit}</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -71,7 +136,7 @@
                 <goal>generate-code</goal>
                 <goal>generate-code-tests</goal>
                 <!-- TODO: enable once Quarkus is updated -->
-<!--                <goal>native-image-agent</goal>-->
+                <!--                <goal>native-image-agent</goal>-->
               </goals>
             </execution>
           </executions>
@@ -81,6 +146,7 @@
           <version>${compiler-plugin.version}</version>
           <configuration>
             <parameters>true</parameters>
+            <compilerArgument>-proc:full</compilerArgument>
           </configuration>
         </plugin>
         <plugin>
@@ -90,6 +156,7 @@
             <systemPropertyVariables>
               <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
               <maven.home>${maven.home}</maven.home>
+              <quarkus.log.category.esthesis.level>DEBUG</quarkus.log.category.esthesis.level>
             </systemPropertyVariables>
           </configuration>
         </plugin>
@@ -106,7 +173,8 @@
           </executions>
           <configuration>
             <systemPropertyVariables>
-              <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+              <native.image.path>${project.build.directory}/${project.build.finalName}-runner
+              </native.image.path>
               <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
               <maven.home>${maven.home}</maven.home>
             </systemPropertyVariables>
